# waffo-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
crates/waffo-rs/: Cargo.toml
crates/waffo-rs-derive/: Cargo.toml
crates/waffo-rs-derive/src/: lib.rs
crates/waffo-rs/src/: base.rs  common.rs  config.rs  crypto.rs  lib.rs
crates/waffo-rs/src/biz/: mod.rs
crates/waffo-rs/src/biz/chargeback/: mod.rs
crates/waffo-rs/src/biz/merchant/: mod.rs
crates/waffo-rs/src/biz/order/: mod.rs
crates/waffo-rs/src/biz/refund/: mod.rs
crates/waffo-rs/src/biz/subscription/: mod.rs
crates/waffo-rs/src/common/: de.rs  error.rs  mod.rs  trace.rs
crates/waffo-rs/src/webhook/: axum.rs  events.rs  mod.rs  notification.rs
crates/waffo-rs/tests/: base_tests.rs  chargeback_tests.rs  config_tests.rs  crypto_vectors.rs  dto_serde.rs  e2e.rs  endpoints_tests.rs  null_tolerance.rs  redirect_tests.rs  spine_smoke.rs  transport_tests.rs  webhook_tests.rs
