[workspace]
resolver = "2"
members = ["crates/waffo-rs", "crates/waffo-rs-derive"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"

# Strict quality gate. clippy is the linter (rustfmt is the formatter, see
# rustfmt.toml). Deny clippy::all and clippy::pedantic; the allow-list below
# turns off only the opinionated/doc-noise pedantic lints that are not worth the
# churn for an SDK of this shape.
# `deny` (not `forbid`) so test-only env manipulation can opt in locally; the
# library source itself contains no unsafe code.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

[profile.release]
opt-level = 3
