[package]
name = "waffo-rs-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Derive macros for waffo-rs"
repository = "https://github.com/XuanLee-HEALER/waffo-rs"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
