[package]
name = "waffo-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Async Rust SDK for the Waffo payment platform"
repository = "https://github.com/XuanLee-HEALER/waffo-rs"
readme = "../../README.md"
keywords = ["waffo", "payment", "sdk", "webhook", "async"]
categories = ["api-bindings", "asynchronous"]

# Build docs.rs with the optional `axum` integration documented too (docs.rs
# uses default features otherwise).
[package.metadata.docs.rs]
all-features = true

[lib]
name = "waffo_rs"

[lints]
workspace = true

[dependencies]
waffo-rs-derive = { path = "../waffo-rs-derive", version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
reqwest = "0.13"
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "2"
tracing = "0.1"
axum = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex = "0.4"
wiremock = "0.6"
dotenvy = "0.15"

[features]
default = []
axum = ["dep:axum"]
